Refactored AbstractTest, Tag, TagDetail, TagList, and all AJAX calls. Fixed full-screen error/loading layout (1px gap). Created Ajax component. Got cookies to work 100%

--- a/src/App.css
+++ b/src/App.css
@@ -27,8 +27,8 @@ body {
   top: 50%;
   left: 50%;
   z-index: 1;
-  min-width: 100%;
-  min-height: 100%;
+  min-width: 101%;
+  min-height: 101%;
   width: auto;
   height: auto;
   -webkit-transform: translate(-50%, -50%);
